Story/000189/fix story text truncation (#65)
* fix story text truncation styling

* version bump for css fix

--- a/src/components/molecules/cards/BacklogItemCard.module.css
+++ b/src/components/molecules/cards/BacklogItemCard.module.css
@@ -104,14 +104,15 @@
     padding-left: 0.25rem; /* TODO: Use constants??? */
     padding-right: 0.25rem; /* TODO: Use constants??? */
     flex-grow: 1;
-    white-space: nowrap;
-    text-overflow: ellipsis;
     overflow: hidden;
 }
 
 .backlogItemTextContent {
     position: relative;
     top: -0.075rem;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .backlogItemCardOuter.mobile .backlogItemText {
